--- a/TracupDemo/app/build.gradle
+++ b/TracupDemo/app/build.gradle
@@ -29,6 +29,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.jakewharton:butterknife:8.4.0'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
-    compile 'com.tracup:library:1.0.5'
+//    compile 'com.tracup:library:1.0.6'
     compile project(':library')
 }
